--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,13 +1,26 @@
-<div class="header">
-    <nav class="nav">
-        <a class="logo" href=""></a>
-        <ul class="list">
-            <li class=""><a href=""></a></li>
-            <li><a href=""></a></li>
-        </ul>
-    </nav>
-    <div>
-        <button type="button"></button>
-        <button type="button"></button>
+<div class="container">
+    <div class="overlay">
+        <nav class="nav">
+            <a class="logo" href="">Filmoteka
+            </a>
+            <ul class="list">
+                <li class="item"><a href="">Home</a></li>
+                <li class="library"><a href="">my library</a></li>
+            </ul>
+        </nav>
+        <form class="search-form" id="search-form">
+            <input type="text" name="searchQuery" autocomplete="off" placeholder="Movie search" />
+            <button type="submit">Search</button>
+        </form>
+        <main role="main">
+            <div class="container">
+                <div class="gallery"></div>
+            </div>
+        </main>
     </div>
+    <li><a href="/src/index.html">Image gallery</a></li>
+
 </div>
+<!-- const API_KEY = 'e52c7d8699df589ec79fa44e6b7f6a0c'; -->
+<!-- const BASE_URL = 'https://api.themoviedb.org/'; -->
+<!-- (`${BASE_URL}3/search/search-movies?key=${API_KEY}`) -->
