--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,4 +1,6 @@
 @import './common';
+@import './page-base';
+@import './variables';
 @import './header.scss';
 @import './main.scss';
 @import './footer.scss';
